--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -82,7 +82,8 @@
         </activity>
         <activity
             android:name="com.example.runningman.Schedule"
-            android:label="@string/title_activity_schedule" >
+            android:label="@string/title_activity_schedule"
+            android:parentActivityName="com.example.runningman.MainActivity" >
         </activity>
         <activity
             android:name="com.example.runningman.History"
