--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,19 @@
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	
+	<permission android:name="com.example.gcm.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
+    
+    <uses-permission android:name="com.google.android.c2dm.SEND" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    
+    <uses-permission android:name="android.permission.VIBRATE" />    
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" /> 
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -96,6 +108,35 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.runningman.MainActivity" />
         </activity>
+        
+        <service
+            android:name="com.example.runningman.NotifyService"
+            android:icon="@drawable/ic_launcher"
+  			android:label="service_name" > 
+            
+        </service>
+        
+        <receiver 
+            android:name="com.example.runningman.NotifyBroadcastReceiver"
+            android:icon="@drawable/ic_launcher"
+  			android:label="service_name" > 
+            <intent-filter>
+            <action
+                    android:name="com.example.runningman.NotifyAction"/>
+        </intent-filter>
+        </receiver>
+        
+        <receiver
+            android:name=".GCMBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+                
+                <category android:name="com.example.runningman" />
+            </intent-filter>
+        </receiver>
+        <service android:name=".GcmIntentService" />
     </application>
 
 </manifest>
